mobile friendly, fix to work on mobile

--- a/blurred bubble/background-bubble.css
+++ b/blurred bubble/background-bubble.css
@@ -3,6 +3,7 @@
     width: 100%;
     position: absolute;
     z-index: -1;
+    -webkit-backdrop-filter: blur(200px);
     backdrop-filter: blur(200px);
 }
 #bubble{
